--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title>Junia Marketing - Digital Marketing and Ecommerce Expert</title>
+      <title>Junia Marketing - Digital Marketing and Ecommerce Experts</title>
 
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -64,7 +64,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading mb-4"> Your Digital Business Expert</span> </div>
+          <div class="intro-heading mb-4"> Your Digital Business Experts</span> </div>
           <div class="intro-lead-in"> Years of experience in digital marketing to grow your business.</div>
 
          <!-- <div id="light">
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="col-lg-8 mx-auto text-center mb-5"> Branding - the missing link</h2>
+            <h2 class="col-lg-8 mx-auto text-center mb-5"> Branding - the missing link </h2>
           </div>
         </div>
         <div class="row text-center">
@@ -488,7 +488,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Me</h2>
+            <h2 class="section-heading text-uppercase">Contact Us</h2>
             <h3 class="text-white">Your questions - answered! </h3>
              <div class="m-4 intro-text">
                 <a class=" start text-uppercase" href="mailto:raulghiurau@gmail.com">Get Started Today</a>
