--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
       <!-- Custom styles for this template -->
       <link href="css/agency.css" rel="stylesheet">
 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124672932-6"></script>
+      <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+
+       gtag('config', 'UA-124672932-6');
+        </script>
+
+
   </head>
 
   <body id="page-top">
