--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
       <!-- Custom styles for this template -->
       <link href="css/agency.css" rel="stylesheet">
+      <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+      <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124672932-6"></script>
